--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -475,7 +475,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_train_noisy = x_train_re + noise_factor * np.random.normal(loc=0.0, scale=1.0, size=x_train_re.shape)   \n",
@@ -599,6 +601,26 @@
     "    ax.get_xaxis().set_visible(False)  \n",
     "    ax.get_yaxis().set_visible(False)  \n",
     "plt.show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
    ]
   },
   {
